--- a/speech_2_text.ipynb
+++ b/speech_2_text.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -196,8 +196,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -205,7 +207,7 @@
      "text": [
       "Please speak into microphone\n",
       "Time's up, thanks\n",
-      "Text: today is Monday\n"
+      "Sorry, I did not get that\n"
      ]
     }
    ],
@@ -244,19 +246,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please speak into microphone\n"
+      "Please speak into microphone\n",
+      "Time's up, thanks\n",
+      "Sorry, I did not get that\n"
      ]
     }
    ],
    "source": [
-    "print_microphone_text('zh')"
+    "print_microphone_text('cmn-Hans-CN')"
    ]
   }
  ],
